zed: updated the colours of the zed theme to make type hints and comments less similar.

--- a/runs/zed-settings.json
+++ b/runs/zed-settings.json
@@ -124,14 +124,14 @@
     },
 
     "experimental.theme_overrides": {
-        "hint": "#565e6eff",
+        "hint": "#464745ff",
         "syntax": {
             "comment": {
-                "color": "#404652ff"
+                "color": "#3F454Fff"
+            },
+            "string": {
+                "color": "#EDF8A2ff"
             }
-            // "string": {
-            //     "color": "#dad599ff"
-            // }
         }
     }
 }
