style: updated zed theme settings.

--- a/runs/zed-settings.json
+++ b/runs/zed-settings.json
@@ -1,25 +1,30 @@
 {
+    "edit_predictions": {
+        "mode": "subtle",
+        "enabled_in_text_threads": false
+    },
+
     "features": {
         "edit_prediction_provider": "zed"
     },
-    "icon_theme": "Zed (Default)",
 
-    "assistant": {
+    "agent": {
+        "default_profile": "write",
+        "play_sound_when_agent_done": false,
         "default_model": {
             "provider": "zed.dev",
-            "model": "claude-3-5-sonnet-latest"
+            "model": "claude-sonnet-4"
         },
-        "version": "2",
         "dock": "right"
     },
 
     "jupyter": {
         "enabled": false,
-        "dock": "left"
+        "dock": "right"
     },
 
     "chat_panel": {
-        "button": false
+        "button": "never"
     },
 
     "collaboration_panel": {
@@ -30,37 +35,42 @@
         "button": false
     },
 
-    "theme": "One Dark",
+    "theme": "Nord",
+
     "telemetry": {
         "metrics": false
     },
 
     "ui_font_size": 16,
     "ui_font_family": "iA Writer Duo V",
+
     "preferred_line_length": 80,
     "format_on_save": "on",
     "tab_size": 4,
-    "buffer_font_size": 18,
+
+    "buffer_font_size": 17,
     "buffer_font_family": "JetBrains Mono",
     "buffer_font_features": {
         "liga": true
     },
-
     "buffer_line_height": {
-        "custom": 1.44
+        "custom": 1.4
     },
 
     "show_whitespaces": "selection",
+    "agent_font_size": 16,
     "terminal": {
         "font_size": 14,
         "dock": "right",
         "working_directory": "current_project_directory"
     },
+
     "git": {
         "inline_blame": {
             "enabled": false
         }
     },
+
     "inlay_hints": {
         "enabled": true,
         "show_type_hints": true,
@@ -124,13 +134,13 @@
     },
 
     "experimental.theme_overrides": {
-        "hint": "#464745ff",
+        "hint": "#474646ff",
         "syntax": {
             "comment": {
-                "color": "#3F454Fff"
+                "color": "#3F4652ff"
             },
             "string": {
-                "color": "#EDF8A2ff"
+                "color": "#F1DEB9ff"
             }
         }
     }
