--- a/runs/zed-settings.json
+++ b/runs/zed-settings.json
@@ -1,12 +1,60 @@
 {
+    "disable_ai": false,
+    "theme": "Alt Tailwind",
+    "ui_font_weight": 400.0,
+    "audio": {
+        "experimental.legacy_audio_compatible": false,
+        "experimental.denoise": false,
+        "experimental.auto_speaker_volume": false
+    },
+    "active_pane_modifiers": {
+        "border_size": 0.0
+    },
+    "centered_layout": {},
+    "tabs": {
+        "file_icons": true,
+        "git_status": false
+    },
+    "tab_bar": {
+        "show": true
+    },
+    "title_bar": {
+        "show_menus": false,
+        "show_sign_in": true,
+        "show_user_picture": true,
+        "show_onboarding_banner": false,
+        "show_project_items": true,
+        "show_branch_name": true,
+        "show_branch_icon": false
+    },
+    "search": {
+        "button": true
+    },
+    "status_bar": {
+        "cursor_position_button": false,
+        "active_language_button": true
+    },
+    "relative_line_numbers": "disabled",
+    "gutter": {
+        "min_line_number_digits": 4,
+        "breakpoints": true,
+        "line_numbers": true
+    },
+    "current_line_highlight": "all",
+    "selection_highlight": true,
+    "rounded_selection": false,
+    "cursor_shape": "bar",
+    "agent_buffer_font_size": 14.0,
+    "buffer_font_weight": 350.0,
     "outline_panel": {
+        "expand_outlines_with_depth": 100,
         "button": true,
-        "default_width": 300,
+        "default_width": 359.0,
         "dock": "left",
         "file_icons": true,
         "folder_icons": true,
         "git_status": true,
-        "indent_size": 20,
+        "indent_size": 18.0,
         "auto_reveal_entries": true,
         "auto_fold_dirs": true,
         "indent_guides": {
@@ -18,6 +66,8 @@
     },
 
     "project_panel": {
+        "indent_size": 18.0,
+        "hide_gitignore": false,
         "button": true,
         "default_width": 240,
         "dock": "left",
@@ -25,7 +75,6 @@
         "file_icons": true,
         "folder_icons": true,
         "git_status": true,
-        "indent_size": 20,
         "auto_reveal_entries": true,
         "auto_fold_dirs": true,
         "scrollbar": {
@@ -62,13 +111,8 @@
     },
 
     "agent": {
-        "default_profile": "write",
-        "play_sound_when_agent_done": false,
-        "default_model": {
-            "provider": "zed.dev",
-            "model": "claude-sonnet-4"
-        },
-        "dock": "right"
+        "default_profile": "ask",
+        "model_parameters": []
     },
 
     "collaboration_panel": {
@@ -79,25 +123,19 @@
         "button": false
     },
 
-    "theme": {
-        "mode": "dark",
-        "dark": "One Dark",
-        "light": "One Light"
-    },
-
     "telemetry": {
         "diagnostics": false,
         "metrics": false
     },
 
-    "ui_font_size": 16,
+    "ui_font_size": 15.0,
     "ui_font_family": "iA Writer Duo V",
 
-    "preferred_line_length": 100,
+    "preferred_line_length": 88,
     "format_on_save": "on",
     "tab_size": 4,
 
-    "buffer_font_size": 17,
+    "buffer_font_size": 16.0,
     "buffer_font_family": "JetBrains Mono",
     "buffer_font_features": {
         "liga": true
@@ -108,14 +146,24 @@
     // "buffer_line_height": "standard",
     // "buffer_line_height": "comfortable",
     "show_whitespaces": "selection",
-    "agent_font_size": 16,
+    "agent_ui_font_size": 15.0,
     "terminal": {
+        "toolbar": {
+            "breadcrumbs": false
+        },
+        "button": true,
         "font_size": 14,
         "dock": "bottom",
         "working_directory": "current_project_directory"
     },
 
     "git": {
+        "branch_picker": {
+            "show_author_name": true
+        },
+        "blame": {
+            "show_avatar": false
+        },
         "inline_blame": {
             "enabled": false
         },
@@ -185,7 +233,7 @@
     "toolbar": {
         "breadcrumbs": true,
         "quick_actions": true,
-        "selections_menu": true,
+        "selections_menu": false,
         "agent_review": true,
         "code_actions": false
     },
