Updated Zed settings.

--- a/runs/zed-settings.json
+++ b/runs/zed-settings.json
@@ -1,6 +1,6 @@
 {
     "session": {
-        "trust_all_worktrees": true,
+        "trust_all_worktrees": true
     },
     "theme": "One Dark",
     "disable_ai": false,
@@ -8,18 +8,18 @@
     "audio": {
         "experimental.legacy_audio_compatible": false,
         "experimental.denoise": false,
-        "experimental.auto_speaker_volume": false,
+        "experimental.auto_speaker_volume": false
     },
     "active_pane_modifiers": {
-        "border_size": 0.0,
+        "border_size": 0.0
     },
     "centered_layout": {},
     "tabs": {
         "file_icons": true,
-        "git_status": false,
+        "git_status": false
     },
     "tab_bar": {
-        "show": true,
+        "show": true
     },
     "title_bar": {
         "show_menus": false,
@@ -28,20 +28,20 @@
         "show_onboarding_banner": false,
         "show_project_items": true,
         "show_branch_name": true,
-        "show_branch_icon": false,
+        "show_branch_icon": false
     },
     "search": {
-        "button": true,
+        "button": true
     },
     "status_bar": {
         "cursor_position_button": false,
-        "active_language_button": true,
+        "active_language_button": true
     },
     "relative_line_numbers": "disabled",
     "gutter": {
         "min_line_number_digits": 4,
         "breakpoints": true,
-        "line_numbers": true,
+        "line_numbers": true
     },
     "current_line_highlight": "all",
     "selection_highlight": true,
@@ -61,11 +61,11 @@
         "auto_reveal_entries": true,
         "auto_fold_dirs": true,
         "indent_guides": {
-            "show": "always",
+            "show": "always"
         },
         "scrollbar": {
-            "show": "never",
-        },
+            "show": "never"
+        }
     },
 
     "project_panel": {
@@ -81,59 +81,59 @@
         "auto_reveal_entries": true,
         "auto_fold_dirs": true,
         "scrollbar": {
-            "show": null,
+            "show": null
         },
         "sticky_scroll": true,
         "show_diagnostics": "all",
         "indent_guides": {
-            "show": "always",
+            "show": "always"
         },
         "hide_root": false,
-        "starts_open": true,
+        "starts_open": true
     },
 
     "bottom_dock_layout": "contained", // "left_aligned" if need more space on left.
 
     "debugger": {
-        "dock": "right",
+        "dock": "right"
     },
 
     "auto_install_extensions": {
         "html": true,
         "wgsl": true,
-        "vue": true,
+        "vue": true
     },
 
     "edit_predictions": {
         "mode": "subtle",
-        "enabled_in_text_threads": false,
+        "enabled_in_text_threads": false
     },
 
     "features": {
-        "edit_prediction_provider": "zed",
+        "edit_prediction_provider": "zed"
     },
 
     "agent": {
         "dock": "right",
         "default_model": {
             "provider": "zed.dev",
-            "model": "claude-sonnet-4-5",
+            "model": "claude-sonnet-4-5"
         },
         "default_profile": "ask",
-        "model_parameters": [],
+        "model_parameters": []
     },
 
     "collaboration_panel": {
-        "button": false,
+        "button": false
     },
 
     "notification_panel": {
-        "button": false,
+        "button": false
     },
 
     "telemetry": {
         "diagnostics": false,
-        "metrics": false,
+        "metrics": false
     },
 
     "ui_font_size": 15.0,
@@ -146,10 +146,10 @@
     "buffer_font_size": 16.0,
     "buffer_font_family": "JetBrains Mono",
     "buffer_font_features": {
-        "liga": true,
+        "liga": true
     },
     "buffer_line_height": {
-        "custom": 1.4,
+        "custom": 1.4
     },
     // "buffer_line_height": "standard",
     // "buffer_line_height": "comfortable",
@@ -157,29 +157,29 @@
     "agent_ui_font_size": 16.0,
     "terminal": {
         "toolbar": {
-            "breadcrumbs": false,
+            "breadcrumbs": false
         },
         "button": true,
         "font_size": 14,
-        "dock": "right",
-        "working_directory": "current_project_directory",
+        "dock": "bottom",
+        "working_directory": "current_project_directory"
     },
 
     "git": {
         "branch_picker": {
-            "show_author_name": true,
+            "show_author_name": true
         },
         "blame": {
-            "show_avatar": false,
+            "show_avatar": false
         },
         "inline_blame": {
-            "enabled": false,
+            "enabled": false
         },
-        "git_gutter": "tracked_files",
+        "git_gutter": "tracked_files"
     },
 
     "inlay_hints": {
-        "enabled": false,
+        "enabled": false
     },
 
     "lsp": {
@@ -189,14 +189,14 @@
                     "maxLength": null,
                     "lifetimeElisionHints": {
                         "useParameterNames": true,
-                        "enable": "skip_trivial",
+                        "enable": "skip_trivial"
                     },
                     "closureReturnTypeHints": {
-                        "enable": "always",
-                    },
-                },
-            },
-        },
+                        "enable": "always"
+                    }
+                }
+            }
+        }
     },
 
     // Scrollbar related settings
@@ -234,8 +234,8 @@
             /// When false, forcefully disables the horizontal scrollbar. Otherwise, obey other settings.
             "horizontal": true,
             /// When false, forcefully disables the vertical scrollbar. Otherwise, obey other settings.
-            "vertical": true,
-        },
+            "vertical": true
+        }
     },
 
     "toolbar": {
@@ -243,15 +243,15 @@
         "quick_actions": true,
         "selections_menu": false,
         "agent_review": true,
-        "code_actions": false,
+        "code_actions": false
     },
 
     "diagnostics": {
         "include_warnings": true,
         "inline": {
             "enabled": true,
-            "max_severity": "off",
-        },
+            "max_severity": "off"
+        }
     },
 
     "theme_overrides": {
@@ -260,68 +260,21 @@
             "syntax": {
                 "comment": {
                     "color": "#3E4552ff",
-                    "font_style": "italic",
+                    "font_style": "italic"
                 },
 
                 "string": {
-                    "color": "#F1DEB9ff",
+                    "color": "#F1DEB9ff"
                 },
                 "variable": {
-                    "color": "#E2E0DA",
-                    // "font_weight": 300,
+                    "color": "#E2E0DA"
                 },
                 "function": {
                     // "color": "#FF0000FF",
                     // "font_style": "italic",
                     // "font_weight": 500,
-                },
-            },
-        },
-
-        "Zed Legacy: Rosé Pine Moon": {
-            "syntax": {
-                "comment": {
-                    "color": "#44485F",
-                },
-
-                "string": {
-                    "color": "#DFDCB1",
-                },
-
-                "type": {
-                    "color": "#33A39E",
-                },
-
-                "hint": {
-                    "color": "#3d5566",
-                },
-            },
-        },
-        "Tailwind Syntax": {
-            "syntax": {
-                "comment": {
-                    "color": "#44485F",
-                },
-
-                // "keyword": {
-                //     "color": "#ABd2f8",
-                // },
-
-                "string": {
-                    "color": "#DFDCB1",
-                },
-
-                "type": {
-                    "color": "#33A39E",
-                },
-
-                "function": {
-                    "color": "#ff1111FF",
-                },
-                // "hint": {
-                //     "color": "#3d5566",
-                // },
-            },
-        },
-    },
+                }
+            }
+        }
+    }
 }
